more work on getting plugins working with zeek 4.0

--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -63,7 +63,6 @@ filter {
       "[zeek_mqtt_publish][payload_len]" => "integer"
       "[zeek_mqtt_subscribe][granted_qos_level]" => "integer"
       "[zeek_mqtt_subscribe][qos_levels]" => "integer"
-      "[zeek_noise][enc_payload_len]" => "integer"
       "[zeek_ntp][num_exts]" => "integer"
       "[zeek_ntp][poll]" => "float"
       "[zeek_ntp][precision]" => "float"
@@ -81,6 +80,8 @@ filter {
       "[zeek_tftp][block_sent]" => "integer"
       "[zeek_tftp][block_acked]" => "integer"
       "[zeek_tftp][error_code]" => "integer"
+      "[zeek_wireguard][sender_index]" => "integer"
+      "[zeek_wireguard][receiver_index]" => "integer"
     }
   }
 
