--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,8 +69,11 @@ x-zeek-variables: &zeek-variables
   ZEEK_DISABLE_SSL_VALIDATE_CERTS : ''
   ZEEK_DISABLE_TELNET : ''
   ZEEK_DISABLE_TRACK_ALL_ASSETS : ''
-  ZEEK_DISABLE_WIREGUARD : ''
-  ZEEK_DISABLE_WIREGUARD_TRANSPORT_PACKETS : 'true'
+  ZEEK_DISABLE_SPICY_DHCP : 'true'
+  ZEEK_DISABLE_SPICY_DNS : 'true'
+  ZEEK_DISABLE_SPICY_HTTP : 'true'
+  ZEEK_DISABLE_SPICY_TFTP : ''
+  ZEEK_DISABLE_SPICY_WIREGUARD : ''
 
 x-kibana-helper-variables: &kibana-helper-variables
   ELASTICSEARCH_INDEX_SIZE_PRUNE_LIMIT : '0'
