--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -220,8 +220,8 @@ filter {
   if ([zeek_mysql][cmd])                        { mutate { id => "mutate_merge_normalize_zeek_mysql_cmd"
                                                            merge => { "[zeek][action]" => "[zeek_mysql][cmd]" } } }
 
-  if ([zeek_noise][msg_type])                   { mutate { id => "mutate_merge_normalize_zeek_noise_msg_type"
-                                                           merge => { "[zeek][action]" => "[zeek_noise][msg_type]" } } }
+  if ([zeek_wireguard][packet_type])            { mutate { id => "mutate_merge_normalize_zeek_wireguard_packet_type"
+                                                           merge => { "[zeek][action]" => "[zeek_wireguard][packet_type]" } } }
 
   if ([zeek_ntlm][success]) {
     # this log entry implicitly means a login attempt
