--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2731,6 +2731,8 @@ filter {
     }
 
   } else if ([source] == "ssl") {
+    # TODO: differences between ssl.log in zeek 3 vs zeek 4?
+
     #############################################################################################################################
     # ssl.log
     # https://docs.zeek.org/en/stable/scripts/base/protocols/ssl/main.zeek.html#type-SSL::Info
