Fix cisagov/Malcolm#162, dependency failure between services and settings (htadmin/freq/nginx-proxy)
* Enable freq server whether or not logstash uses it. If it's not used, it will just sit idly and never receive connections.
* When basic authentication is not used (i.e., when LDAP is used instead), don't serve htadmin but serve a landing page so that they know what's going on and the health check doesn't fail.

--- a/htadmin/supervisord.conf
+++ b/htadmin/supervisord.conf
@@ -21,14 +21,12 @@ command=php-fpm7.3 -F -R -g /tmp/php-fpm.pid
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-autostart=%(ENV_NGINX_BASIC_AUTH)s
 
 [program:nginx]
-command=/bin/bash -c "sleep 10 && nginx -g \"daemon off;\""
+command=/bin/bash /usr/local/bin/htadmin.sh
 startsecs=15
 stopasgroup=true
 killasgroup=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
-autostart=%(ENV_NGINX_BASIC_AUTH)s
