--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -226,9 +226,14 @@ filter {
     }
 
     if ([zeek_cols][service] =~ /^spicy_/) {
-      # if it's coming from spicy, we don't care
-      mutate { id => "mutate_gsub_field_zeek_conn_service_spicy"
+      # if it's coming from spicy, we don't care to have that in the service name
+      mutate { id => "mutate_gsub_field_zeek_conn_service_spicy_prefix"
                gsub => [ "[zeek_cols][service]", "^spicy_", "" ] }
+
+      # some spicy services are named like blah_udp or blah_tcp,
+      # and we don't care about the _udp/_tcp suffix
+      mutate { id => "mutate_gsub_field_zeek_conn_service_spicy_suffix"
+               gsub => [ "[zeek_cols][service]", "_(tcp|udp)$", "" ] }
 
       # normalize service string(s)
       if ([zeek_cols][service] == "tftp_data") {
@@ -2619,43 +2624,35 @@ filter {
       }
     }
 
-  } else if ([source] == "spicy-noise") {
+  } else if ([source] == "wireguard") {
     #############################################################################################################################
-    # spicy-noise.log
-    # https://github.com/theparanoids/spicy-noise/blob/master/zeek/spicy-noise.zeek
-
-    # rename spicy-noise to noise
-    mutate { id => "mutate_replace_zeek_source_spicy_noise"
-             replace => { "[source]" => "noise" } }
+    # wireguard.log
+    # https://github.com/zeek/spicy-analyzers/tree/main/analyzer/protocol/wireguard
 
     dissect {
-      id => "dissect_zeek_noise"
+      id => "dissect_zeek_wireguard"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][msg_type]}	%{[zeek_cols][sender]}	%{[zeek_cols][receiver]}	%{[zeek_cols][unenc_ephemeral]}	%{[zeek_cols][enc_static]}	%{[zeek_cols][enc_timestamp]}	%{[zeek_cols][enc_nothing]}	%{[zeek_cols][nonce]}	%{[zeek_cols][enc_cookie]}	%{[zeek_cols][mac1]}	%{[zeek_cols][mac2]}	%{[zeek_cols][enc_payload_len]}	%{[zeek_cols][enc_payload]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][packet_type]}	%{[zeek_cols][sender_index]}	%{[zeek_cols][receiver_index]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
       mutate {
-        id => "mutate_split_zeek_noise"
+        id => "mutate_split_zeek_wireguard"
         # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
         split => { "[message]" => "	" }
       }
       ruby {
-        id => "ruby_zip_zeek_noise"
-        init => "$zeek_noise_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'msg_type', 'sender', 'receiver', 'unenc_ephemeral', 'enc_static', 'enc_timestamp', 'enc_nothing', 'nonce', 'enc_cookie', 'mac1', 'mac2', 'enc_payload_len', 'enc_payload' ]"
-        code => "event.set('[zeek_cols]', $zeek_noise_field_names.zip(event.get('[message]')).to_h)"
+        id => "ruby_zip_zeek_wireguard"
+        init => "$zeek_wireguard_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'packet_type', 'sender_index', 'receiver_index' ]"
+        code => "event.set('[zeek_cols]', $zeek_wireguard_field_names.zip(event.get('[message]')).to_h)"
       }
     }
 
-    # for now, drop enc_payload for size
-    if ([zeek_cols][enc_payload]) {
-      mutate { id => "mutate_remove_field_zeek_noise_enc_payload"
-               remove_field => [ "[zeek_cols][enc_payload]" ] }
-    }
+    mutate { id => "mutate_gsub_zeek_wireguard_packet_type"
+             gsub => [ "[zeek_cols][packet_type]", "Wireguard::WG_", "" ] }
 
     mutate {
-      # TODO: is this technically accurate? should it be "noise" instead/as well?
       id => "mutate_add_field_zeek_service_wireguard"
       add_field =>  {
         "[zeek_cols][proto]" => "udp"
@@ -2737,6 +2734,8 @@ filter {
     }
 
   } else if ([source] == "ssl") {
+    # TODO: differences between ssl.log in zeek 3 vs zeek 4?
+
     #############################################################################################################################
     # ssl.log
     # https://docs.zeek.org/en/stable/scripts/base/protocols/ssl/main.zeek.html#type-SSL::Info
@@ -2995,7 +2994,6 @@ filter {
         code => "event.set('[zeek_cols]', $zeek_tunnel_field_names.zip(event.get('[message]')).to_h)"
       }
     }
-
 
     mutate { id => "mutate_gsub_zeek_tunnel_action"
              gsub => [ "[zeek_cols][action]", "Tunnel::", "" ] }
