use capa release binary rather than pip; some zeek/logstash tweaks

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -225,6 +225,7 @@ filter {
       }
     }
 
+    # normalize service string(s)
     if ([zeek_cols][service] =~ /^spicy_/) {
       # if it's coming from spicy, we don't care to have that in the service name
       mutate { id => "mutate_gsub_field_zeek_conn_service_spicy_prefix"
@@ -233,13 +234,16 @@ filter {
       # some spicy services are named like blah_udp or blah_tcp,
       # and we don't care about the _udp/_tcp suffix
       mutate { id => "mutate_gsub_field_zeek_conn_service_spicy_suffix"
-               gsub => [ "[zeek_cols][service]", "_(tcp|udp)$", "" ] }
+               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?$", "" ] }
 
-      # normalize service string(s)
       if ([zeek_cols][service] == "tftp_data") {
         mutate { id => "mutate_replace_zeek_conn_service_tftp_data"
                  replace => { "[zeek_cols][service]" => "tftp" } }
       }
+    }
+    if ([zeek_cols][service] == "ftp_data") {
+      mutate { id => "mutate_replace_zeek_conn_service_ftp_data"
+               replace => { "[zeek_cols][service]" => "ftp" } }
     }
 
     mutate { id => "mutate_add_field_zeek_conn_segmentCnt"
@@ -1021,6 +1025,27 @@ filter {
     mutate { id => "mutate_lowercase_zeek_dpd_service"
              lowercase => [ "[zeek_cols][service]" ] }
 
+    # normalize service string(s)
+    if ([zeek_cols][service] =~ /^spicy_/) {
+      # if it's coming from spicy, we don't care to have that in the service name
+      mutate { id => "mutate_gsub_field_zeek_dpd_service_spicy_prefix"
+               gsub => [ "[zeek_cols][service]", "^spicy_", "" ] }
+
+      # some spicy services are named like blah_udp or blah_tcp,
+      # and we don't care about the _udp/_tcp suffix
+      mutate { id => "mutate_gsub_field_zeek_dpd_service_spicy_suffix"
+               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?$", "" ] }
+
+      if ([zeek_cols][service] == "tftp_data") {
+        mutate { id => "mutate_replace_zeek_dpd_service_tftp_data"
+                 replace => { "[zeek_cols][service]" => "tftp" } }
+      }
+    }
+    if ([zeek_cols][service] == "ftp_data") {
+      mutate { id => "mutate_replace_zeek_dpd_service_ftp_data"
+               replace => { "[zeek_cols][service]" => "ftp" } }
+    }
+
   } else if ([source] == "enip") {
     #############################################################################################################################
     # enip.log
@@ -1539,16 +1564,25 @@ filter {
     mutate { id => "mutate_lowercase_zeek_known_services_service"
              lowercase => [ "[zeek_cols][service]" ] }
 
+    # normalize service string(s)
     if ([zeek_cols][service] =~ /^spicy_/) {
-      # if it's coming from spicy, we don't care
-      mutate { id => "mutate_gsub_field_zeek_known_services_spicy"
+      # if it's coming from spicy, we don't care to have that in the service name
+      mutate { id => "mutate_gsub_field_zeek_known_service_spicy_prefix"
                gsub => [ "[zeek_cols][service]", "^spicy_", "" ] }
 
-      # normalize service string(s)
+      # some spicy services are named like blah_udp or blah_tcp,
+      # and we don't care about the _udp/_tcp suffix
+      mutate { id => "mutate_gsub_field_zeek_known_service_spicy_suffix"
+               gsub => [ "[zeek_cols][service]", "_(tcp|udp)(_hmac)?$", "" ] }
+
       if ([zeek_cols][service] == "tftp_data") {
-        mutate { id => "mutate_replace_zeek_known_services_tftp_data"
+        mutate { id => "mutate_replace_zeek_known_service_tftp_data"
                  replace => { "[zeek_cols][service]" => "tftp" } }
       }
+    }
+    if ([zeek_cols][service] == "ftp_data") {
+      mutate { id => "mutate_replace_zeek_known_service_ftp_data"
+               replace => { "[zeek_cols][service]" => "ftp" } }
     }
 
   } else if ([source] == "ldap") {
