--- a/logstash/maps/zeek_log_ecs_categories.yaml
+++ b/logstash/maps/zeek_log_ecs_categories.yaml
@@ -20,11 +20,20 @@
 "dns": ["network"]
 "dpd": ["network"]
 "enip": ["ot", "network"]
+"ecat_registers": ["ot", "network"]
+"ecat_log_address": ["ot", "network"]
+"ecat_dev_info": ["ot", "network"]
+"ecat_aoe_info": ["ot", "network"]
+"ecat_coe_info": ["ot", "network"]
+"ecat_foe_info": ["ot", "network"]
+"ecat_soe_info": ["ot", "network"]
+"ecat_arp_info": ["ot", "network"]
 "files": ["file"]
 "ftp": ["file", "network"]
 "gquic": ["network"]
 "http": ["web", "network"]
 "intel": ["intrusion_detection", "network"]
+"ipsec": ["network"]
 "irc": ["network"]
 "iso_cotp": ["ot", "network"]
 "kerberos": ["authentication", "iam", "network"]
@@ -46,6 +55,7 @@
 "notice": ["intrusion_detection", "network"]
 "ntlm": ["authentication", "iam", "network"]
 "ntp": ["network"]
+"openvpn": ["network"]
 "pe": ["file"]
 "profinet": ["ot", "network"]
 "profinet_dce_rpc": ["ot", "network"]
@@ -70,4 +80,5 @@
 "tds_sql_batch": ["database", "network"]
 "tunnel": ["network"]
 "weird": ["intrusion_detection", "network"]
+"wireguard": ["network"]
 "x509": ["file"]
