--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1077,6 +1077,264 @@ filter {
       add_field => { "[zeek_cols][service]" => "enip" }
     }
 
+  } else if ([source] == "ecat_registers") {
+    #############################################################################################################################
+    # ecat_registers.log
+    # https://github.com/cisagov/icsnpp-ethercat
+
+    dissect {
+      id => "dissect_zeek_ecat_registers"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][resp_l2_addr]}	%{[zeek_cols][command]}	%{[zeek_cols][slave_addr]}	%{[zeek_cols][register_type]}	%{[zeek_cols][register_addr]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ecat_registers"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ecat_registers"
+        init => "$zeek_ecat_registers_field_names = [ 'ts', 'orig_l2_addr', 'resp_l2_addr', 'command', 'slave_addr', 'register_type', 'register_addr', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_ecat_registers_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ecat_registers"
+      add_field => {
+        "[zeek_cols][service]" => "ethercat"
+      }
+    }
+
+  } else if ([source] == "ecat_log_address") {
+    #############################################################################################################################
+    # ecat_log_address.log
+    # https://github.com/cisagov/icsnpp-ethercat
+
+    dissect {
+      id => "dissect_zeek_ecat_log_address"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][resp_l2_addr]}	%{[zeek_cols][log_addr]}	%{[zeek_cols][length]}	%{[zeek_cols][command]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ecat_log_address"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ecat_log_address"
+        init => "$zeek_ecat_log_address_field_names = [ 'ts', 'orig_l2_addr', 'resp_l2_addr', 'log_addr', 'length', 'command', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_ecat_log_address_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ecat_log_address"
+      add_field => {
+        "[zeek_cols][service]" => "ethercat"
+      }
+    }
+
+  } else if ([source] == "ecat_dev_info") {
+    #############################################################################################################################
+    # ecat_dev_info.log
+    # https://github.com/cisagov/icsnpp-ethercat
+
+    dissect {
+      id => "dissect_zeek_ecat_dev_info"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][slave_id]}	%{[zeek_cols][revision]}	%{[zeek_cols][dev_type]}	%{[zeek_cols][build]}	%{[zeek_cols][fmmucnt]}	%{[zeek_cols][smcount]}	%{[zeek_cols][ports]}	%{[zeek_cols][dpram]}	%{[zeek_cols][features]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ecat_dev_info"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ecat_dev_info"
+        init => "$zeek_ecat_dev_info_field_names = [ 'ts', 'slave_id', 'revision', 'dev_type', 'build', 'fmmucnt', 'smcount', 'ports', 'dpram', 'features' ]"
+        code => "event.set('[zeek_cols]', $zeek_ecat_dev_info_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ecat_dev_info"
+      add_field => {
+        "[zeek_cols][service]" => "ethercat"
+      }
+    }
+
+  } else if ([source] == "ecat_aoe_info") {
+    #############################################################################################################################
+    # ecat_aoe_info.log
+    # https://github.com/cisagov/icsnpp-ethercat
+
+    dissect {
+      id => "dissect_zeek_ecat_aoe_info"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][resp_id]}	%{[zeek_cols][resp_port]}	%{[zeek_cols][orig_id]}	%{[zeek_cols][orig_port]}	%{[zeek_cols][command]}	%{[zeek_cols][state]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ecat_aoe_info"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ecat_aoe_info"
+        init => "$zeek_ecat_aoe_info_field_names = [ 'ts', 'resp_id', 'resp_port', 'orig_id', 'orig_port', 'command', 'state', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_ecat_aoe_info_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ecat_aoe_info"
+      add_field => {
+        "[zeek_cols][service]" => "ethercat"
+      }
+    }
+
+  } else if ([source] == "ecat_coe_info") {
+    #############################################################################################################################
+    # ecat_coe_info.log
+    # https://github.com/cisagov/icsnpp-ethercat
+
+    dissect {
+      id => "dissect_zeek_ecat_coe_info"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][number]}	%{[zeek_cols][type]}	%{[zeek_cols][req_resp]}	%{[zeek_cols][index]}	%{[zeek_cols][subindex]}	%{[zeek_cols][dataoffset]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ecat_coe_info"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ecat_coe_info"
+        init => "$zeek_ecat_coe_info_field_names = [ 'ts', 'number', 'type', 'req_resp', 'index', 'subindex', 'dataoffset' ]"
+        code => "event.set('[zeek_cols]', $zeek_ecat_coe_info_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ecat_coe_info"
+      add_field => {
+        "[zeek_cols][service]" => "ethercat"
+      }
+    }
+
+  } else if ([source] == "ecat_foe_info") {
+    #############################################################################################################################
+    # ecat_foe_info.log
+    # https://github.com/cisagov/icsnpp-ethercat
+
+    dissect {
+      id => "dissect_zeek_ecat_foe_info"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][opcode]}	%{[zeek_cols][reserved]}	%{[zeek_cols][packet_num]}	%{[zeek_cols][error_code]}	%{[zeek_cols][filename]}	%{[zeek_cols][data]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ecat_foe_info"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ecat_foe_info"
+        init => "$zeek_ecat_foe_info_field_names = [ 'ts', 'opcode', 'reserved', 'packet_num', 'error_code', 'filename', 'data' ]"
+        code => "event.set('[zeek_cols]', $zeek_ecat_foe_info_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ecat_foe_info"
+      add_field => {
+        "[zeek_cols][service]" => "ethercat"
+      }
+    }
+
+  } else if ([source] == "ecat_soe_info") {
+    #############################################################################################################################
+    # ecat_soe_info.log
+    # https://github.com/cisagov/icsnpp-ethercat
+
+    dissect {
+      id => "dissect_zeek_ecat_soe_info"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][opcode]}	%{[zeek_cols][incomplete]}	%{[zeek_cols][error]}	%{[zeek_cols][drive_num]}	%{[zeek_cols][element]}	%{[zeek_cols][index]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ecat_soe_info"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ecat_soe_info"
+        init => "$zeek_ecat_soe_info_field_names = [ 'ts', 'opcode', 'incomplete', 'error', 'drive_num', 'element', 'index' ]"
+        code => "event.set('[zeek_cols]', $zeek_ecat_soe_info_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ecat_soe_info"
+      add_field => {
+        "[zeek_cols][service]" => "ethercat"
+      }
+    }
+
+  } else if ([source] == "ecat_arp_info") {
+    #############################################################################################################################
+    # ecat_arp_info.log
+    # https://github.com/cisagov/icsnpp-ethercat
+
+    dissect {
+      id => "dissect_zeek_ecat_arp_info"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][arp_type]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][resp_l2_addr]}	%{[zeek_cols][orig_proto_addr]}	%{[zeek_cols][orig_hw_addr]}	%{[zeek_cols][resp_proto_addr]}	%{[zeek_cols][resp_hw_addr]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ecat_arp_info"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ecat_arp_info"
+        init => "$zeek_ecat_arp_info_field_names = [ 'ts', 'arp_type', 'orig_l2_addr', 'resp_l2_addr', 'orig_proto_addr', 'orig_hw_addr', 'resp_proto_addr', 'resp_hw_addr' ]"
+        code => "event.set('[zeek_cols]', $zeek_ecat_arp_info_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ecat_arp_info"
+      add_field => {
+        "[zeek_cols][service]" => "ethercat"
+      }
+    }
+
+    # TODO: check orig_proto_addr/orig_hw_addr resp_proto_addr/resp_hw_addr and convert to ip, etc. if necessary?
+
   } else if ([source] == "files") {
     #############################################################################################################################
     # files.log
@@ -1354,6 +1612,38 @@ filter {
       add_field => {
         "[zeek_cols][proto]" => "tcp"
         "[zeek_cols][service]" => "intel"
+      }
+    }
+
+  } else if ([source] == "ipsec") {
+    #############################################################################################################################
+    # ipsec.log
+    # https://github.com/zeek/spicy-analyzers/blob/main/analyzer/protocol/ipsec/main.zeek
+
+    dissect {
+      id => "dissect_zeek_ipsec"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][is_orig]}	%{[zeek_cols][initiator_spi]}	%{[zeek_cols][responder_spi]}	%{[zeek_cols][maj_ver]}	%{[zeek_cols][min_ver]}	%{[zeek_cols][exchange_type]}	%{[zeek_cols][flag_e]}	%{[zeek_cols][flag_c]}	%{[zeek_cols][flag_a]}	%{[zeek_cols][flag_i]}	%{[zeek_cols][flag_v]}	%{[zeek_cols][flag_r]}	%{[zeek_cols][message_id]}	%{[zeek_cols][vendor_ids]}	%{[zeek_cols][notify_messages]}	%{[zeek_cols][transforms]}	%{[zeek_cols][ke_dh_groups]}	%{[zeek_cols][proposals]}	%{[zeek_cols][certificates]}	%{[zeek_cols][transform_attributes]}	%{[zeek_cols][length]}	%{[zeek_cols][hash]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_ipsec"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_ipsec"
+        init => "$zeek_ipsec_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'is_orig', 'initiator_spi', 'responder_spi', 'maj_ver', 'min_ver', 'exchange_type', 'flag_e', 'flag_c', 'flag_a', 'flag_i', 'flag_v', 'flag_r', 'message_id', 'vendor_ids', 'notify_messages', 'transforms', 'ke_dh_groups', 'proposals', 'certificates', 'transform_attributes', 'length', 'hash' ]"
+        code => "event.set('[zeek_cols]', $zeek_ipsec_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_ipsec"
+      add_field => {
+        "[zeek_cols][service]" => "ipsec"
       }
     }
 
@@ -3689,6 +3979,24 @@ filter {
       code => "event.set('[totDataBytes]', event.get('[zeek_http][response_body_len]').to_i + event.get('[zeek_http][request_body_len]').to_i)"
     }
 
+  } else if ([source] == "ipsec") {
+    #############################################################################################################################
+    # ipsec.log specific logic
+
+    mutate { id => "mutate_split_zeek_ipsec_vendor_ids"
+             split => { "[zeek_ipsec][vendor_ids]" => "," } }
+    mutate { id => "mutate_split_zeek_ipsec_notify_messages"
+             split => { "[zeek_ipsec][notify_messages]" => "," } }
+    mutate { id => "mutate_split_zeek_ipsec_transforms"
+             split => { "[zeek_ipsec][transforms]" => "," } }
+    mutate { id => "mutate_split_zeek_ipsec_ke_dh_groups"
+             split => { "[zeek_ipsec][ke_dh_groups]" => "," } }
+    mutate { id => "mutate_split_zeek_ipsec_proposals"
+             split => { "[zeek_ipsec][proposals]" => "," } }
+    mutate { id => "mutate_split_zeek_ipsec_certificates"
+             split => { "[zeek_ipsec][certificates]" => "," } }
+    mutate { id => "mutate_split_zeek_ipsec_transform_attributes"
+             split => { "[zeek_ipsec][transform_attributes]" => "," } }
 
   } else if ([source] == "irc") {
     #############################################################################################################################
