--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -9,6 +9,17 @@ filter {
   if ([zeek_http][version])                     { mutate { id => "mutate_merge_normalize_zeek_http_version"
                                                            merge => { "[zeek][service_version]" => "[zeek_http][version]" } } }
 
+  if ([zeek_ipsec]) {
+    ruby {
+      id => "ruby_zeek_field_zeek_service_version_ipsec"
+      code => "
+        versions = Array.new
+        versions << [event.get('[zeek_ipsec][maj_ver]'),
+                     event.get('[zeek_ipsec][min_ver]')].compact.join('.')
+        event.set('[zeek][service_version]', versions)"
+    }
+  }
+
   if ([zeek_ntp][version])                      { mutate { id => "mutate_merge_normalize_zeek_ntp_version"
                                                            merge => { "[zeek][service_version]" => "[zeek_ntp][version]" } } }
 
@@ -153,6 +164,19 @@ filter {
     mutate { id => "mutate_merge_zeek_dns_action"
              merge => { "[zeek][action]" => "[@metadata][dns_action]" } }
   }
+
+  # TODO: convert zeek_ecat_foe_info.opcode and zeek_ecat_soe_info.opcode to operations
+  # zeek EtherCAT commands/operations
+  if ([zeek_ecat_aoe_info][command])            { mutate { id => "mutate_merge_normalize_zeek_ecat_aoe_info_command"
+                                                           merge => { "[zeek][action]" => "[zeek_ecat_aoe_info][command]" } } }
+  if ([zeek_ecat_foe_info][opcode])             { mutate { id => "mutate_merge_normalize_zeek_ecat_foe_info_opcode"
+                                                           merge => { "[zeek][action]" => "[zeek_ecat_foe_info][opcode]" } } }
+  if ([zeek_ecat_log_address][command])         { mutate { id => "mutate_merge_normalize_zeek_ecat_log_address"
+                                                           merge => { "[zeek][action]" => "[zeek_ecat_log_address][command]" } } }
+  if ([zeek_ecat_registers][command])           { mutate { id => "mutate_merge_normalize_zeek_ecat_registers_command"
+                                                           merge => { "[zeek][action]" => "[zeek_ecat_registers][command]" } } }
+  if ([zeek_ecat_soe_info][opcode])             { mutate { id => "mutate_merge_normalize_zeek_ecat_soe_info_opcode"
+                                                           merge => { "[zeek][action]" => "[zeek_ecat_soe_info][opcode]" } } }
 
   if ([zeek_enip][enip_command])                { mutate { id => "mutate_merge_normalize_zeek_enip_enip_command"
                                                            merge => { "[zeek][action]" => "[zeek_enip][enip_command]" } } }
@@ -478,6 +502,13 @@ filter {
                merge => { "[zeek][result]" => "[@metadata][zeek_dns_rejected_result]" } }
     }
   }
+
+  # TODO: convert zeek_ecat_foe_info.error_code and zeek_ecat_soe_info.error to strings?
+  # zeek_ecat_foe_info.error_code and zeek_ecat_soe_info.error
+  if ([zeek_ecat_foe_info][error_code])        { mutate { id => "mutate_merge_normalize_zeek_ecat_foe_info_error_code"
+                                                          merge => { "[zeek][result]" => "[zeek_ecat_foe_info][error_code]" } } }
+  if ([zeek_ecat_soe_info][error])             { mutate { id => "mutate_merge_normalize_zeek_ecat_soe_info_error"
+                                                          merge => { "[zeek][result]" => "[zeek_ecat_soe_info][error]" } } }
 
   # zeek_enip.enip_status
   if ([zeek_enip][enip_status])         { mutate { id => "mutate_merge_normalize_zeek_enip_enip_status"
@@ -893,6 +924,9 @@ filter {
 
   # Filenames #########################################################################################################
   # collect all filenames under the parent [zeek][filename] array
+
+  if ([zeek_ecat_foe_info][filename])           { mutate { id => "mutate_merge_normalize_zeek_ecat_foe_info_filename"
+                                                           merge => { "[zeek][filename]" => "[zeek_ecat_foe_info][filename]" } } }
 
   if ([zeek_files][filename])                   { mutate { id => "mutate_merge_normalize_zeek_files_filename"
                                                            merge => { "[zeek][filename]" => "[zeek_files][filename]" } } }
