--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -45,6 +45,7 @@ export ZEEK_DISABLE_TRACK_ALL_ASSETS=
 export ZEEK_DISABLE_SPICY_DHCP=true
 export ZEEK_DISABLE_SPICY_DNS=true
 export ZEEK_DISABLE_SPICY_HTTP=true
+export ZEEK_DISABLE_SPICY_IPSEC=
 export ZEEK_DISABLE_SPICY_OPENVPN=
 export ZEEK_DISABLE_SPICY_TFTP=
 export ZEEK_DISABLE_SPICY_WIREGUARD=
