--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,7 @@ x-zeek-variables: &zeek-variables
   ZEEK_DISABLE_SPICY_DHCP : 'true'
   ZEEK_DISABLE_SPICY_DNS : 'true'
   ZEEK_DISABLE_SPICY_HTTP : 'true'
+  ZEEK_DISABLE_SPICY_IPSEC : ''
   ZEEK_DISABLE_SPICY_OPENVPN : ''
   ZEEK_DISABLE_SPICY_TFTP : ''
   ZEEK_DISABLE_SPICY_WIREGUARD : ''
