--- a/logstash/pipelines/zeek/13_zeek_convert.conf
+++ b/logstash/pipelines/zeek/13_zeek_convert.conf
@@ -1,6 +1,11 @@
 filter {
 
   # set data types for fields that belong to various zeek logs
+
+  # todo
+  # "[zeek_ecat_dev_info][fmmucnt]" => "integer"
+  # "[zeek_ecat_dev_info][smcount]" => "integer"
+
   mutate {
     id => "mutate_convert_zeek_bulk"
     convert => {
@@ -40,10 +45,17 @@ filter {
       "[zeek_dnp3_control][on_time]" => "integer"
       "[zeek_dnp3_control][off_time]" => "integer"
       "[zeek_dnp3_objects][object_count]" => "integer"
-      "[zeek_dnp3_objects][range_low]" => "integer"
       "[zeek_dnp3_objects][range_high]" => "integer"
+      "[zeek_dnp3_objects][range_low]" => "integer"
       "[zeek_dns][rtt]" => "float"
+      "[zeek_ecat_log_address][length]" => "integer"
       "[zeek_enip][length]" => "integer"
+      "[zeek_ipsec][maj_ver]" => "integer"
+      "[zeek_ipsec][min_ver]" => "integer"
+      "[zeek_ipsec][exchange_type]" => "integer"
+      "[zeek_ipsec][ke_dh_groups]" => "integer"
+      "[zeek_ipsec][proposals]" => "integer"
+      "[zeek_ipsec][length]" => "integer"
       "[zeek_ldap][result_code]" => "integer"
       "[zeek_modbus_detailed][unit_id]" => "integer"
       "[zeek_modbus_detailed][address]" => "integer"
