more work adding new protocols

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -4837,6 +4837,9 @@ filter {
       }
     }
 
+    if ([zeek_x509][san_ip]) { mutate { id => "mutate_split_zeek_x509_san_ip"
+                                        split => { "[zeek_x509][san_ip]" => "," } } }
+
 
   } # end if/else if/else for specific log type logic
   #######################################################################################################
