--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -177,6 +177,8 @@ filter {
                                                            merge => { "[zeek][action]" => "[zeek_ecat_registers][command]" } } }
   if ([zeek_ecat_soe_info][opcode])             { mutate { id => "mutate_merge_normalize_zeek_ecat_soe_info_opcode"
                                                            merge => { "[zeek][action]" => "[zeek_ecat_soe_info][opcode]" } } }
+  if ([zeek_ecat_arp_info][arp_type])           { mutate { id => "mutate_merge_normalize_zeek_ecat_arp_info_arp_type"
+                                                           merge => { "[zeek][action]" => "[zeek_ecat_arp_info][arp_type]" } } }
 
   if ([zeek_enip][enip_command])                { mutate { id => "mutate_merge_normalize_zeek_enip_enip_command"
                                                            merge => { "[zeek][action]" => "[zeek_enip][enip_command]" } } }
