additional work on parsing new protocols

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1874,6 +1874,10 @@ filter {
       mutate { id => "mutate_replace_zeek_known_service_ftp_data"
                replace => { "[zeek_cols][service]" => "ftp" } }
     }
+    if ([zeek_cols][service] == "ipsec_ike") {
+      mutate { id => "mutate_replace_zeek_known_service_ipsec_ike"
+               replace => { "[zeek_cols][service]" => "ipsec" } }
+    }
 
   } else if ([source] == "ldap") {
     #############################################################################################################################
@@ -3997,6 +4001,33 @@ filter {
              split => { "[zeek_ipsec][certificates]" => "," } }
     mutate { id => "mutate_split_zeek_ipsec_transform_attributes"
              split => { "[zeek_ipsec][transform_attributes]" => "," } }
+
+    ruby {
+      id => "ruby_zeek_field_ipsec_flags"
+      code => '
+        flags = Array.new
+        if (event.get("[zeek_ipsec][flag_e]") == "T") then
+          flags << "E"
+        end
+        if (event.get("[zeek_ipsec][flag_c]") == "T") then
+          flags << "C"
+        end
+        if (event.get("[zeek_ipsec][flag_a]") == "T") then
+          flags << "A"
+        end
+        if (event.get("[zeek_ipsec][flag_i]") == "T") then
+          flags << "I"
+        end
+        if (event.get("[zeek_ipsec][flag_v]") == "T") then
+          flags << "V"
+        end
+        if (event.get("[zeek_ipsec][flag_r]") == "T") then
+          flags << "R"
+        end
+        if !flags.empty? then
+          event.set("[zeek_ipsec][flags]", flags)
+        end'
+    }
 
   } else if ([source] == "irc") {
     #############################################################################################################################
