fix fields for wireguard

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2961,7 +2961,7 @@ filter {
       id => "dissect_zeek_wireguard"
       # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
       mapping => {
-        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][packet_type]}	%{[zeek_cols][sender_index]}	%{[zeek_cols][receiver_index]}"
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][established]}	%{[zeek_cols][initiations]}	%{[zeek_cols][responses]}"
       }
     }
     if ("_dissectfailure" in [tags]) {
@@ -2972,7 +2972,7 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_wireguard"
-        init => "$zeek_wireguard_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'packet_type', 'sender_index', 'receiver_index' ]"
+        init => "$zeek_wireguard_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'established', 'initiations', 'responses' ]"
         code => "event.set('[zeek_cols]', $zeek_wireguard_field_names.zip(event.get('[message]')).to_h)"
       }
     }
@@ -4196,11 +4196,6 @@ filter {
       }
       if ([@metadata][decrypted_xor_fuid]) { mutate { id => "mutate_merge_zeek_notice_decrypted_xor_fuid"
                                                       merge => { "[zeek][fuid]" => "[@metadata][decrypted_xor_fuid]" } } }
-    }
-
-    if ([zeek_notice][note] == "Signatures::Sensitive_Signature") and ([zeek_notice][msg] =~ /WireGuard Handshake/) {
-      # I don't want a signature for wireguard handshake initiation
-      drop { id => "drop_zeek_ignored_notice_wg" }
     }
 
   } else if ([source] == "ntp") {
