--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -245,6 +245,10 @@ filter {
       mutate { id => "mutate_replace_zeek_conn_service_ftp_data"
                replace => { "[zeek_cols][service]" => "ftp" } }
     }
+    if ([zeek_cols][service] == "ipsec_ike") {
+      mutate { id => "mutate_replace_zeek_conn_service_ipsec_ike"
+               replace => { "[zeek_cols][service]" => "ipsec" } }
+    }
 
     mutate { id => "mutate_add_field_zeek_conn_segmentCnt"
              add_field => { "[segmentCnt]" => "1" } }
