--- a/sensor-iso/beats/Dockerfile
+++ b/sensor-iso/beats/Dockerfile
@@ -12,30 +12,30 @@ ENV GOVERS="2:1.14~1~bpo10+1"
 ENV PATH="$GOBIN:${PATH}"
 ENV PYTHON_EXE=python3
 
-RUN sed -i "s/buster main/buster main contrib non-free/g" /etc/apt/sources.list && \
+RUN set -x && \
+    sed -i "s/buster main/buster main contrib non-free/g" /etc/apt/sources.list && \
       echo "deb http://deb.debian.org/debian buster-backports main" >> /etc/apt/sources.list && \
-      apt-get -q update && apt-get install -t buster-backports -y \
-      "golang-doc=$GOVERS" \
-      "golang-go=$GOVERS" \
-      "golang-src=$GOVERS" \
-      "golang=$GOVERS" \
-      build-essential \
-      curl \
-      git \
-      python3 \
-      python3-dev \
-      python3-pip \
-      python3-setuptools \
-      python3-virtualenv \
-      python3-wheel \
-      vim-tiny \
-      virtualenv && \
+      apt-get -q update && \
+      apt-get install -y curl git vim-tiny && \
+      apt-get install -t buster-backports -y \
+        "golang-doc=$GOVERS" \
+        "golang-go=$GOVERS" \
+        "golang-src=$GOVERS" \
+        "golang=$GOVERS" \
+        build-essential \
+        python3 \
+        python3-dev \
+        python3-pip \
+        python3-setuptools \
+        python3-virtualenv \
+        python3-wheel \
+        virtualenv && \
     rm -rf /var/lib/apt/lists/* && \
     update-alternatives --install /usr/bin/python python /usr/bin/python3 2 && \
     update-alternatives --install /usr/bin/pip pip /usr/bin/pip3 2 && \
     python3 -m pip install -U pyyaml cookiecutter && \
     mkdir -p "$GOPATH/bin" && \
-    bash -c "curl https://glide.sh/get | bash" && \
+    bash -c "curl -sSL https://raw.githubusercontent.com/Masterminds/glide.sh/master/get | sed 's@https://glide.sh/@https://raw.githubusercontent.com/Masterminds/glide.sh/master/@g'| bash" && \
     go get -u -d github.com/magefile/mage && \
     cd $GOPATH/src/github.com/magefile/mage && \
     go run bootstrap.go
